<resources>
    <string name="app_name">InternProject</string>
    <string name="login_str">로그인</string>
    <string name="enter_id_str">ID를 입력해주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pwd_guide_str">비밀번호를 입력해주세요.</string>
    <string name="sign_up_str">회원가입</string>
    <string name="next_str">다음</string>
    <string name="name_guide_str">이름을 입력해주세요.</string>
    <string name="name_str">이름</string>
    <string name="id_str">ID</string>
    <string name="enter_pwd_str">비밀번호를 입력해주세요.</string>
    <string name="pwd_str">비밀번호</string>
    <string name="enter_pwd_check_str">비밀번호를 한 번 더 입력해주세요.</string>
    <string name="birth_guide_str">생년월일을 입력해주세요.</string>
    <string name="birth_str">생년월일</string>
    <string name="confirm_str">확인</string>
    <string name="select_birth_str">생년월일 선택</string>
    <string name="on_sign_up_str">가입 중</string>
    <string name="sign_up_success_str">가입이 완료되었습니다!</string>
    <string name="signup_success_guide_str">로그인 화면으로 돌아가 로그인하실 수 있습니다.</string>
    <string name="back_str">돌아가기</string>
    <string name="wrong_pwd_str">비밀번호가 다릅니다.</string>
    <string name="success_login_str">로그인 성공!</string>
    <string name="select_plz">둘 중 하나를 선택해주세요.</string>
</resources>