<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="15dp">

    <ImageView
        android:id="@+id/success_ani"
        android:layout_width="80dp"
        android:layout_height="80dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="20dp"

        android:src="@color/white"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/success_sign_up_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/success_ani"

        android:layout_marginTop="40dp"

        android:text="@string/sign_up_success_str"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/success_guide_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/success_sign_up_tv"

        android:layout_marginTop="30dp"

        android:text="@string/signup_success_guide_str"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/back_to_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="30dp"

        android:text="@string/back_str"
        android:textSize="22sp"
        android:textColor="@color/white"

        android:background="@drawable/rounded_blue_rectangle"
        android:gravity="center"
        android:padding="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>