<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.signup.PwdFieldFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"

        android:src="@drawable/back_btn"
        android:contentDescription="@null"
        />


    <TextView
        android:id="@+id/pwd_guide_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"

        android:text="@string/pwd_guide_str"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="28sp"

        android:maxLines="2"
        />

    <EditText
        android:id="@+id/pwd_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/pwd_guide_tv"
        app:layout_constraintStart_toStartOf="@id/pwd_guide_tv"
        app:layout_constraintEnd_toStartOf="@id/show_pwd_btn"

        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"

        android:hint="@string/pwd_str"
        android:textSize="22sp"
        android:privateImeOptions="defaultInputmode=english"

        android:inputType="textPassword"
        android:maxLength="15"
        android:importantForAutofill="no"

        android:background="@null"
        />

    <ImageView
        android:id="@+id/show_pwd_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"

        app:layout_constraintTop_toTopOf="@id/pwd_et"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginEnd="15dp"

        android:src="@drawable/show_pwd_btn"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/wrong_input_guide_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/pwd_et"

        android:layout_marginHorizontal="15dp"

        android:text="아이디를 확인해주세요."
        android:textSize="16sp"
        android:textColor="@color/alert_text_color"

        app:drawableStartCompat="@drawable/warning_icon"

        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/next_str"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        android:background="@drawable/toss_blue_button_selector"
        android:padding="16dp"
        android:gravity="center"

        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>